Fix reader on small screen

--- a/src/WebClientApp/src/components/ReaderHeader/ReaderHeader.module.scss
+++ b/src/WebClientApp/src/components/ReaderHeader/ReaderHeader.module.scss
@@ -52,3 +52,13 @@
   line-height: 20px;
   margin-left: 2px;
 }
+
+@media (max-width: v.$tablet-width) {
+  .header {
+    top: 0;
+    left: 0;
+    right: 0;
+    border-radius: 0;
+    padding: 12px;
+  }
+}
